transaction save/checkout and category haircut hardcode
